# high-school-python-vibe-coding-template

./: CLAUDE.md  LICENSE  README.md  pyproject.toml
.cursor/rules/: development-workflow.mdc  project-structure.mdc  python-coding-standards.mdc
data/: household_budget.csv
src/: hello.py  household_analyzer_en.py  household_dashboard.py
