[project]
name = "high-school-python-vibe-coding-template"
version = "0.1.0"
description = "『ハイスクールPython』の、Python の Vibe Coding 用のテンプレートです。"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "matplotlib>=3.10.3",
  "numpy>=2.3.0",
  "pandas>=2.3.0",
  "scikit-learn>=1.7.0",
  "scipy>=1.15.3",
  "streamlit>=1.45.1",
]

[dependency-groups]
dev = ["mypy>=1.16.0", "pytest>=8.4.0", "ruff>=0.11.13"]
